--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="img/espresso.jpg" class="card-img-top" alt="Espresso">
                     <div class="card-body">
                         <h5 class="card-title">Espresso</h5>
-                        <p class="card-text">A concentrated coffee beverage you're sure to love, brewed by forcing hot water under pressure through finely ground coffee.</p>
+                        <p class="card-text">A concentrated coffee beverage you're sure to love; brewed by forcing hot water under pressure through finely ground coffee.</p>
                     </div>
                     <div class="card-footer text-bg-dark">
                         <p class="card-text text-center">$4.50</p>
