minor cosmetic changes

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
         <!--Social Links-->
         <div class="container">
             <div class="row">
-                <div class="col-4 col-sm-2 offset-1 align-self-center text-center">
+                <div class="col-4 col-sm-4 align-self-center text-center">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#contact" onclick="highlightInfo()">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5 text-center">
+                <div class="col-6 col-sm-4 text-center">
                     <h5 id="social">Social</h5>
                     <a href="http://instagram.com/"><i class="fa-brands fa-instagram fa-xl"></i></a>
                     <a href="http://facebook.com/"><i class="fa-brands fa-facebook fa-xl"></i></a>
